--- a/css/site.css
+++ b/css/site.css
@@ -34,3 +34,10 @@ h1 {
   border: solid 1px #888;
   background-color: #A3C9A8;
 }
+
+.contact-info {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: solid 1px #888;
+  background-color: #008FFF;
+}
