--- a/css/site.css
+++ b/css/site.css
@@ -24,7 +24,7 @@ h1 {
   margin: 10px;
   padding: 10px;
   border: solid 1px #888;
-  background-color: #84B59F;
+  background-color: #00d9ff;
 }
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
@@ -39,5 +39,5 @@ h1 {
   padding: 10px;
   margin-bottom: 10px;
   border: solid 1px #888;
-  background-color: #008FFF;
+  background-color: #A3C9A8;
 }
