--- a/css/site.css
+++ b/css/site.css
@@ -8,15 +8,13 @@ body {
 }
 
 /* we can have rules apply to multiple elements at the same time with commas */
-h1,h2,h3 {
-  font-family: sans-serif;
-}
 
 /* and we can have rules that overlap other rules, both take effect */
-h1 {
+h1,h2,h3 {
   letter-spacing: 5px;
   word-spacing: 5px;
   font-size: 200%;
+  font-family: URW Chancery L, cursive;
 }
 
 /* the hashtag in a CSS selector selects an element by id, e.g., id="content" */
