--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,6 +1,6 @@
 /* this css file will only style the homepage of our site */
 
-.hehehe {
+.portrait {
   margin: 10px;
-  max-width: 500px;
+  max-width: 300px;
 }
