--- a/css/site.css
+++ b/css/site.css
@@ -14,7 +14,7 @@ h1,h2,h3 {
   letter-spacing: 5px;
   word-spacing: 5px;
   font-size: 200%;
-  font-family: URW Chancery L, cursive;
+  font-family: "fantasy", papyrus;
 }
 
 /* the hashtag in a CSS selector selects an element by id, e.g., id="content" */
@@ -23,6 +23,7 @@ h1,h2,h3 {
   padding: 10px;
   border: solid 1px #888;
   background-color: #00d9ff;
+  font-family: "fantasy", papyrus;
 }
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
@@ -30,12 +31,12 @@ h1,h2,h3 {
   padding: 10px;
   margin-bottom: 10px;
   border: solid 1px #888;
-  background-color: #A3C9A8;
+  background-color: #00578a;
 }
 
 .contact-info {
   padding: 10px;
   margin-bottom: 10px;
   border: solid 1px #888;
-  background-color: #A3C9A8;
+  background-color: #00578a;
 }
